syntax = "proto3";

package business.v1;

option go_package = "github.com/md-rashed-zaman/apptremind/protos/gen/business/v1;businessv1";

import "google/protobuf/timestamp.proto";

message BusinessProfileRequest {
  string business_id = 1;
}

message ReminderPolicy {
  repeated int32 reminder_offsets_minutes = 1; // e.g. 1440, 60
  string timezone = 2;
}

message BusinessProfileResponse {
  string business_id = 1;
  string name = 2;
  ReminderPolicy reminder_policy = 3;
}

message AvailabilityConfigRequest {
  string business_id = 1;
  string staff_id = 2;
  string service_id = 3;
  // Date in YYYY-MM-DD (business local date; server applies business timezone).
  string date = 4;
}

message AvailabilityConfigResponse {
  string business_id = 1;
  string staff_id = 2;
  string service_id = 3;
  string timezone = 4;
  int32 duration_minutes = 5;
  int32 slot_step_minutes = 6;
  bool is_working = 7;
  google.protobuf.Timestamp work_start_utc = 8;
  google.protobuf.Timestamp work_end_utc = 9;
  // If present, use these windows to compute slots (work hours with time-off subtracted).
  repeated AvailabilityWindow windows_utc = 10;
}

message AvailabilityWindow {
  google.protobuf.Timestamp start_utc = 1;
  google.protobuf.Timestamp end_utc = 2;
}

service BusinessService {
  rpc GetBusinessProfile(BusinessProfileRequest) returns (BusinessProfileResponse);
  rpc GetAvailabilityConfig(AvailabilityConfigRequest) returns (AvailabilityConfigResponse);
}
